# jera-cli

./: .cursorignore  .gitignore  README.md  install.sh  jera_cli.py  pyproject.toml  requirements.txt  setup.py  uninstall.sh
.gitlab/merge_request_templates/: default.md
jera_cli/: __init__.py  cli.py
jera_cli/commands/: commands.py  config.py  config.py.new  ingress.py  metrics.py  namespaces.py  nodes.py  pods.py  storage.py
jera_cli/utils/: common.py  kubernetes.py
scripts/: cluster_log_diagnostics.sh  critical_pod_removal.sh  force_pod_termination.sh  k8s_cpu_usage.sh  migrate_nodes.sh  node_shutdown.sh  resolve_volume_attach.sh
